# backend/internal/model/course.go
@@ -10,7 +10,7 @@ type Course struct {
     InstructorID    string            `json:"instructor_id"`
     Title           string            `json:"title"`
     Description     string            `json:"description"`
-    CoverImageURL   sql.NullString    `json:"cover_image_url,omitempty"`
+    CoverImageURL   sql.NullString    `json:"cover_image_url,omitzero"`
     CreatedAt       time.Time         `json:"created_at"`
     UpdatedAt       time.Time         `json:"updated_at"`
 }
